--- a/css/home.css
+++ b/css/home.css
@@ -3,10 +3,10 @@
 	position: absolute;
 	left: 50%;
 	margin-left: -600px;
-	background-color: #000;
+	background-color: #eee;
 }
 .homeBody{
-	background-color: #000;
+	background-color: #eee;
 }
 #homeImgWall{
 	height: 300px;
